@@ -1,0 +1,16 @@
+language: perl
+
+perl:
+    - "5.16"
+    - "5.14"
+    - "5.12"
+    - "5.10"
+
+before_install:
+    - "cpanm -q -n Dist::Zilla::PluginBundle::Author::CHIM"
+
+install:
+    - "dzil authordeps --missing | xargs cpanm -q -n && dzil listdeps --missing | xargs cpanm -q -n"
+
+script:
+    - "TRAVIS_CI_ORG_BUILD=1 dzil test --release"
